--- a/.github/workflows/mfem-jit.yml
+++ b/.github/workflows/mfem-jit.yml
@@ -87,8 +87,8 @@ jobs:
       if: matrix.mpi == 'par' && steps.hypre-cache.outputs.cache-hit != 'true'
       run: |
         wget --no-verbose https://github.com/hypre-space/hypre/archive/HYPRE_TGZ
-        rm -rf ${{ HYPRE_DIR }}
-        tar -xzf ${{ HYPRE_TGZ }}
+        rm -rf ${{ env.HYPRE_DIR }}
+        tar -xzf ${{ env.HYPRE_TGZ }}
       shell: bash
 
     - name: Install Hypre (make)
