--- a/.github/workflows/mfem-jit.yml
+++ b/.github/workflows/mfem-jit.yml
@@ -25,8 +25,8 @@ on:
 env:
   HYPRE_TGZ: v2.29.0.tar.gz
   HYPRE_DIR: hypre-2.29.0
-  METIS_TGZ: metis-4.0.3.tar.gz
-  METIS_DIR: metis-4.0.3
+  METIS_TGZ: metis-5.1.0.tar.gz
+  METIS_DIR: metis-5.1.0
 
 jobs:
   builds-JIT-tests:
@@ -61,10 +61,25 @@ jobs:
     - name: Get NPROCESSORS
       run: getconf _NPROCESSORS_ONLN
 
-    - name: MFEM Checkout
-      uses: actions/checkout@v3
+    # METIS cache & install
+    - name: METIS cache
+      id: metis-cache
+      if: matrix.mpi == 'par'
+      uses: actions/cache@v3
       with:
-        path: mfem
+        path: ${{ env.METIS_DIR }}
+        key: ${{ runner.os }}-build-${{ env.METIS_DIR }}
+
+    - name: METIS install
+      if: matrix.mpi == 'par' && steps.metis-cache.outputs.cache-hit != 'true'
+      run: |
+        wget --no-verbose https://mfem.github.io/tpls/${{ env.METIS_TGZ }}
+        rm -rf ${{ env.METIS_DIR }}
+        tar -xzf ${{ env.METIS_TGZ }}
+        cd ${{ env.METIS_DIR }}
+        make config shared=1 prefix=$(pwd)
+        make install -j3
+      shell: bash
 
     # HYPRE cache & install
     - name: HYPRE cache
@@ -99,26 +114,16 @@ jobs:
         cd ${{ env.HYPRE_DIR }}
         install_prefix="$(pwd)/install"
         cd src
-        ./configure --prefix=${install_prefix} --enable-shared CC=mpicc CXX=mpic++
+        ./configure --prefix=${install_prefix} --enable-shared CC=mpicc CFLAGS=-O1 CXX=mpic++
         make -j3
         make install
       shell: bash
 
-    # METIS cache & install
-    - name: METIS cache
-      id: metis-cache
-      if: matrix.mpi == 'par'
-      uses: actions/cache@v3
+    # MFEM checkout
+    - name: MFEM Checkout
+      uses: actions/checkout@v3
       with:
-        path: ${{ env.METIS_DIR }}
-        key: ${{ runner.os }}-build-${{ env.METIS_DIR }}
-
-    - name: METIS install
-      if: matrix.mpi == 'par' && steps.metis-cache.outputs.cache-hit != 'true'
-      uses: mfem/github-actions/build-metis@v2.4
-      with:
-        archive: ${{ env.METIS_TGZ }}
-        dir: ${{ env.METIS_DIR }}
+        path: mfem
 
     # Make MFEM config and build
     - name: MFEM config and build (Make)
