--- a/.github/workflows/mfem-jit.yml
+++ b/.github/workflows/mfem-jit.yml
@@ -59,6 +59,7 @@ jobs:
         export HOMEBREW_NO_INSTALL_CLEANUP=1
         brew install openmpi
 
+    # #########################################################################
     - name: Get NPROCESSORS
       run: getconf _NPROCESSORS_ONLN
 
@@ -75,6 +76,7 @@ jobs:
     - name: METIS install
       if: matrix.mpi == 'par' && steps.metis-cache.outputs.cache-hit != 'true'
       run: |
+        pwd
         wget --no-verbose https://mfem.github.io/tpls/${{ env.METIS_TGZ }}
         rm -rf ${{ env.METIS_DIR }}
         tar -xzf ${{ env.METIS_TGZ }}
@@ -83,6 +85,10 @@ jobs:
         make config shared=1 prefix=${install_prefix}
         make install -j3
       shell: bash
+
+      # #########################################################################
+      - name: Get pwd after METIS
+        run: pwd
 
     # #########################################################################
     # HYPRE cache & install
@@ -107,6 +113,7 @@ jobs:
     - name: Get Hypre (Linux)
       if: matrix.mpi == 'par' && steps.hypre-cache.outputs.cache-hit != 'true' && matrix.os == 'ubuntu-latest'
       run: |
+        pwd
         wget --no-verbose https://github.com/hypre-space/hypre/archive/${{ env.HYPRE_TGZ }}
         rm -rf ${{ env.HYPRE_DIR }}
         tar -xzf ${{ env.HYPRE_TGZ }}
@@ -115,6 +122,7 @@ jobs:
     - name: Install Hypre (Linux, make)
       if: matrix.mpi == 'par' && steps.hypre-cache.outputs.cache-hit != 'true' && matrix.os == 'ubuntu-latest' && matrix.build-system == 'make'
       run: |
+        pwd
         cd ${{ env.HYPRE_DIR }}
         install_prefix="$(pwd)/install"
         cd src
@@ -122,6 +130,10 @@ jobs:
         make -j3
         make install
       shell: bash
+
+    # #########################################################################
+    - name: Get pwd after HYPRE
+      run: pwd
 
     # #########################################################################
     # MFEM checkout
@@ -144,7 +156,6 @@ jobs:
         mfem-dir: mfem
         library-only: true
         config-options:
-          MFEM_SHARED=YES
           MFEM_USE_JIT=YES
           MFEM_USE_METIS_5=YES
           CXXFLAGS="-O1 -std=c++11"
@@ -154,12 +165,16 @@ jobs:
     - name: MFEM info (Make)
       #if: matrix.build-system == 'make'
       working-directory: mfem
-      run: make info
+      run: |
+        pwd
+        make info
 
     - name: MFEM install (Make)
       #if: matrix.build-system == 'make'
       working-directory: mfem
-      run: make install
+      run: |
+        pwd
+        make install
 
     # #########################################################################
     # JIT tests
