--- a/.github/workflows/mfem-jit.yml
+++ b/.github/workflows/mfem-jit.yml
@@ -30,14 +30,14 @@ env:
   METIS_LNK: metis-5.0
 
 jobs:
-  builds-JIT-tests:
+  MFEM-JIT-Tests:
     strategy:
       matrix:
         os: [ubuntu-latest] #, macos-latest]
         build-system: [make] #, cmake]
-        target: [opt, dbg]
+        target: [opt] #, dbg]
         mpi: [par, seq]
-    name: ${{ matrix.os }}-${{ matrix.build-system }}-${{ matrix.target }}-${{ matrix.mpi }}
+    name: ${{ matrix.os }}-${{ matrix.build-system }}-JIT-${{ matrix.target }}-${{ matrix.mpi }}
 
     runs-on: ${{ matrix.os }}
 
@@ -117,7 +117,7 @@ jobs:
         build-system: make
 
     # HYPRE install with shared build enabled for Linux
-    - name: Get Hypre (Linux)
+    - name: HYPRE download (Linux)
       if: matrix.mpi == 'par' && steps.hypre-cache.outputs.cache-hit != 'true' && matrix.os == 'ubuntu-latest'
       run: |
         wget --no-verbose https://github.com/hypre-space/hypre/archive/${{ env.HYPRE_TGZ }}
@@ -164,19 +164,19 @@ jobs:
           HYPRE_DIR=${{ env.HYPRE_ABS_DIR }}/install
 
     - name: MFEM info (Make)
-      #if: matrix.build-system == 'make'
+      if: matrix.build-system == 'make'
       working-directory: mfem
       run: make info
 
     - name: MFEM install (Make)
-      #if: matrix.build-system == 'make'
+      if: matrix.build-system == 'make'
       working-directory: mfem
       run: make install
 
     # #########################################################################
     # JIT sequential tests
-    - name: MFEM JIT seq tests
-      #if: matrix.build-system == 'make'
+    - name: MFEM JIT sequential tests
+      if: matrix.build-system == 'make'
       if: matrix.mpi == 'seq'
       working-directory: mfem/examples
       # 1. will create the JIT cache: archive + shared
@@ -200,7 +200,7 @@ jobs:
     # MFEM_JIT_FORK forces the root MPI to fork before initialization
     # and use the child process to do the std::system calls
     # #########################################################################
-    - name: MFEM JIT par tests
+    - name: MFEM JIT parallel tests
       working-directory: mfem/examples
       if: matrix.build-system == 'make' && matrix.mpi == 'par'
       run: |
